@@ -1,4 +1,5 @@
 * Release 0.7.0
+	* Fixed Bug #652783: 'Add model find conditions'.
 	* Fixed Bug #635131: 'Building script regression rebuilds everything'.
 	* Fixed Bug #635161: 'Sessions ids are always unknown'.
 	* Fixed Bug #643251: 'Crud put and delete no longer work'.
